[package]
name = "rust_webgl"
version = "0.1.0"
authors = ["KorieDrakeChaney"]
edition = "2021"

[lib]
crate-type = ["cdylib"]


[dependencies]
wasm-bindgen = "0.2.78"

[dependencies.web-sys]
version = "0.3.55"
features = [
    'Document', 
    'HtmlCanvasElement', 
    'HtmlElement', 
    'Window', 
    'WebGl2RenderingContext'
]
